# aesd-assignments

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  merge-script-assignment2.sh  test-unit.sh  test.sh  tester.sh  unit-test.sh
.github/workflows/: github-actions.yml
aesd-char-driver/: .gitignore  Makefile  README.md  aesd-circular-buffer.c  aesd-circular-buffer.h  aesd_ioctl.h  aesdchar.h  aesdchar_load  aesdchar_unload  main.c
assignments/assignment2/: cross-compile.txt  fileresult.txt
conf/: assignment.txt  finder.sh  username.txt  writer.sh
examples/autotest-validate/: .gitignore  Makefile  autotest-validate  autotest-validate-main.c  autotest-validate.c  autotest-validate.h
examples/systemcalls/: systemcalls.c  systemcalls.h
examples/threading/: threading.c  threading.h
finder-app/: Makefile  autorun-qemu.sh  dependencies.sh  finder-test.sh  finder.sh  manual-linux.sh  start-qemu-app.sh  start-qemu-terminal.sh  writer.c  writer.sh  writer.sh.bck
student-test/assignment1/: Test_validate_github_name.c  Test_validate_username.c
